# matrix-qq-bridge

./: .gitignore  .pino-prettyrc  .yarnrc.yml  Cargo.toml  babel.config.json  biome.json  config.yaml.template  flake.nix  jest.config.ts  justfile  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vector.yaml
src/: avatar-color.ts  config.ts  image-convert.ts  index.ts  log.ts  mumble-bridge.ts  mxc-fetch.ts  satori-client.ts
src/bridge/: Bridge.ts
src/broker/: MatrixBroker.ts  QQBroker.ts  asyncTaskQueue.ts  kvStore.ts  messageQueue.ts  msgqueue.ts  qq.ts  throttledQueue.ts
src/model/matrix/: message.ts  tasks.ts
src/model/message/: database.ts
src/model/message/schemas/: index.ts
src/model/message/schemas/v1/: index.ts  message.ts
src/model/qq/: incoming.ts  outgoing.ts  tasks.ts
src/plugins/gemini/: gemini.ts  rpc.ts
src/ponyfill/: array.ts  promise.ts
src/tools/: sendImageTest.ts  sendTest.ts
src/utils/: asyncTaskQueue.ts  config.ts  downloader.ts  log.ts  messageQueue.ts  mime.ts  retry.ts  sampleColor.ts  service.ts
tests/: hello.test.ts
tests/broker/: asyncTaskQueue.test.ts  messageQueue.test.ts  msgqueue.test.ts
tools/: biome.nix
tools/esbuild/: build.ts  config.ts
tools/jest/: jest-testcase.ts  jest.config.ts  run.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
